--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -2,9 +2,9 @@
     $color-title:#302f2f;
     $color-paragraph:#9c9696;
     $color-profile:#ffffff;
-    $color-bgNav: linear-gradient(90deg, rgba(0,20,21,1) 0%, rgba(0,50,63,1) 35%, rgba(16,177,205,1) 100%);
+    $color-bgNav: linear-gradient(90deg, #001415 0%, rgba(0,50,63,1) 35%, rgba(16,177,205,1) 100%);
     $color-bgLinkNav: rgba(255, 255, 255, 0.349);
-    $color-linkNavHover:#034153;
+    
     //Variables font family
     $fontfamily : 'Cinzel Decorative', cursive;
    
