--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -6,8 +6,7 @@
     }
     a:not(.logo):hover{
        background-color: $color-bgLinkNav;
-       border-radius: 5px;
-       color:  $color-linkNavHover ;
+       border-radius: 5px;       
     }   
     position: fixed;
     top:0;
@@ -16,8 +15,13 @@
     -moz-transition:  0.3s linear; 
     -ms-transition:  0.3s linear;    
     transition: 0.3s linear; 
-    // height: 80px;
-    
+    // height: 80px;    
+}
+.active{
+    a{
+    background-color: $color-bgLinkNav;
+       border-radius: 5px;
+    }
 }
 .invisible{
     top:-50px;   
