--- a/public/css/sass/layouts/_layouts.scss
+++ b/public/css/sass/layouts/_layouts.scss
@@ -3,6 +3,39 @@
 "./footer",
 "./mediaquery";
 
+
+/*--------------------------------------------------------------
+# Back to top button
+--------------------------------------------------------------*/
+.back-to-top {
+    position: fixed;
+    display: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    right: 15px;
+    bottom: 15px;
+    background: #27B5CE;
+    color: #fff;
+    transition: display 0.5s ease-in-out;
+    z-index: 50;
+    text-align: center;
+    padding-top: 10px;
+
+  }
+  
+  .back-to-top img {
+    width: 20px;
+    height: 20px;
+  }
+  
+  .back-to-top:hover {
+    color: #fff;
+    background: #1C5B69;
+    transition: background 0.2s ease-in-out;
+  }
+  
+
 // ------------general parameters in common layouts----------------
 //layout flexbox and grid
 .flexrow {
