--- a/public/css/main.css
+++ b/public/css/main.css
@@ -123,7 +123,7 @@ h4, .logo {
   border-radius: 5px;
 }
 
-.active {
+a.active {
   background-color: rgba(255, 255, 255, 0.349);
   border-radius: 5px;
 }
