--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -17,7 +17,7 @@
     transition: 0.3s linear; 
     // height: 80px;    
 }
-.active{
+a.active{
 
     background-color: $color-bgLinkNav;
        border-radius: 5px;
