--- a/public/css/main.css
+++ b/public/css/main.css
@@ -113,6 +113,10 @@ h4, .logo {
   transition: 0.3s linear;
 }
 
+.navbar .logo {
+  font-weight: bold;
+}
+
 .navbar a {
   transition: 500ms linear;
   color: #ffffff !important;
