--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -57,8 +57,31 @@
 
 // content-center
 .content-center {
-	h1{
-		font-family:  $fontfamily;		
+	span {
+
+		font: 700 4em/1 "Oswald", sans-serif;
+		letter-spacing: 0;
+		padding: .25em 0 .325em;
+		display: block;
+		margin: 0 auto;
+		text-shadow: 0 0 80px rgba(255,255,255,.5);
+  
+  /* Clip Background Image */
+  
+		background: url(https://i.ibb.co/RDTnNrT/animated-text-fill.png) repeat-y;
+		-webkit-background-clip: text;
+		background-clip: text;
+  
+  /* Animate Background Image */
+  
+		-webkit-text-fill-color: transparent;
+		-webkit-animation: aitf 100s linear infinite;
+  
+  /* Activate hardware acceleration for smoother animations */
+  
+		-webkit-transform: translate3d(0,0,0);
+		-webkit-backface-visibility: hidden;
+  
 	}
 	position: absolute;
     top: 50%;
@@ -69,6 +92,13 @@
     color: #ffffff;
     width: 100%;
     max-width: 880px;
+}
+
+/* Animate Background Image */
+
+@keyframes aitf {
+	0% { background-position: 0% 50%; }
+	100% { background-position: 100% 50%; }
 }
 .profile-img img {
     position: relative;
