--- a/public/css/main.css
+++ b/public/css/main.css
@@ -197,14 +197,13 @@ a.active:not(.logo) {
   padding: .25em 0 .325em;
   display: block;
   margin: 0 auto;
-  text-shadow: 0 0 80px rgba(255, 255, 255, 0.5);
   /* Clip Background Image */
-  background: url(https://i.ibb.co/RDTnNrT/animated-text-fill.png) repeat-y;
+  background-image: url(../../../images/avatar.png) repeat-y;
   -webkit-background-clip: text;
   background-clip: text;
   /* Animate Background Image */
   -webkit-text-fill-color: transparent;
-  -webkit-animation: aitf 100s linear infinite;
+  -webkit-animation: aitf 80s linear infinite;
   /* Activate hardware acceleration for smoother animations */
   -webkit-transform: translate3d(0, 0, 0);
   -webkit-backface-visibility: hidden;
