--- a/public/css/main.css
+++ b/public/css/main.css
@@ -192,21 +192,21 @@ a.active:not(.logo) {
 }
 
 .content-center span {
+  font-family: "Cinzel Decorative", cursive;
   font: 700 4em/1 "Oswald", sans-serif;
   letter-spacing: 0;
   padding: .25em 0 .325em;
-  display: block;
-  margin: 0 auto;
+  text-shadow: 0 0 80px rgba(255, 255, 255, 0.5);
   /* Clip Background Image */
-  background-image: url(../../../images/avatar.png) repeat-y;
+  background: url(../../../images/animated-text-fill.png) repeat-y;
   -webkit-background-clip: text;
-  background-clip: text;
+  -webkit-background-clip: text;
   /* Animate Background Image */
   -webkit-text-fill-color: transparent;
   -webkit-animation: aitf 80s linear infinite;
   /* Activate hardware acceleration for smoother animations */
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-backface-visibility: hidden;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
 }
 
 /* Animate Background Image */
