--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -57,30 +57,29 @@
 
 // content-center
 .content-center {
-	span {
+	span{
+		font-family:  $fontfamily;	
 		font: 700 4em/1 "Oswald", sans-serif;
-		letter-spacing: 0;
-		padding: .25em 0 .325em;
-		display: block;
-		margin: 0 auto;		
-  
-  /* Clip Background Image */
-  
-		background-image: url(../../../images/avatar.png) repeat-y;
-		-webkit-background-clip: text;
-		background-clip: text;
-  
-  /* Animate Background Image */
-  
-		-webkit-text-fill-color: transparent;
-		-webkit-animation: aitf 80s linear infinite;
-  
-  /* Activate hardware acceleration for smoother animations */
-  
-		-webkit-transform: translate3d(0,0,0);
-		-webkit-backface-visibility: hidden;
-  
-  
+			letter-spacing: 0;
+			padding: .25em 0 .325em;
+			
+			text-shadow: 0 0 80px rgba(255,255,255,.5);
+	  
+	  /* Clip Background Image */
+	  
+			background: url(../../../images/animated-text-fill.png) repeat-y;
+			-webkit-background-clip: text;
+			-webkit-background-clip: text;
+	  
+	  /* Animate Background Image */
+	  
+			-webkit-text-fill-color: transparent;
+			-webkit-animation: aitf 80s linear infinite;
+	  
+	  /* Activate hardware acceleration for smoother animations */
+	  
+			transform: translate3d(0,0,0);
+			backface-visibility: hidden;	
 	}
 	position: absolute;
     top: 50%;
