--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -56,31 +56,42 @@
 }
 
 // content-center
+@font-face {
+	font-family: "cute-animal";
+	src: url("../../../../public/fonts/cute-animal.ttf") ;
+   }
 .content-center {
 	span{
-		font-family:  $fontfamily;	
-		font: 700 4em/1 "Oswald", sans-serif;
-			letter-spacing: 0;
-			padding: .25em 0 .325em;
-			
-			text-shadow: 0 0 80px rgba(255,255,255,.5);
-	  
-	  /* Clip Background Image */
-	  
-			background: url(../../../images/animated-text-fill.png) repeat-y;
-			-webkit-background-clip: text;
-			-webkit-background-clip: text;
-	  
-	  /* Animate Background Image */
-	  
-			-webkit-text-fill-color: transparent;
-			-webkit-animation: aitf 80s linear infinite;
-	  
-	  /* Activate hardware acceleration for smoother animations */
-	  
-			transform: translate3d(0,0,0);
-			backface-visibility: hidden;	
+		font-size:  2em;
+		font-family:  "cute-animal", sans-serif;
+		letter-spacing: 0;
+		padding: .25em 0 .325em;
+		display: block;
+		margin: 0 auto;
+		text-shadow: 0 0 80px rgba(255,255,255,.5);
+  
+  /* Clip Background Image */
+  
+		background: url(../../../../public/images/animated-text-fill.png) repeat-y;
+		-webkit-background-clip: text;
+		background-clip: text;
+  
+//   /* Animate Background Image */
+  
+		-webkit-text-fill-color: transparent;
+		-webkit-animation: aitf 80s linear infinite;
+		 animation: aitf 80s linear infinite;
+  
+  /* Activate hardware acceleration for smoother animations */
+  
+		-webkit-transform: translate3d(0,0,0);
+		transform: translate3d(0,0,0);
+		-webkit-backface-visibility: hidden;
+		backface-visibility: hidden;
+  
 	}
+		
+		
 	position: absolute;
     top: 50%;
     left: 50%;
@@ -91,13 +102,12 @@
     width: 100%;
     max-width: 880px;
 }
-
 /* Animate Background Image */
-
 @keyframes aitf {
 	0% { background-position: 0% 50%; }
 	100% { background-position: 100% 50%; }
 }
+
 .profile-img img {
     position: relative;
     border-radius: 50%;
