--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -1,7 +1,7 @@
 
 //parallax for image profile
 .parallax-window {
-    min-height: 100vh;
+    max-height: 100vh;
     background: transparent;
 }
 
@@ -55,12 +55,12 @@
     }
 }
 
-// content-center
+// content-profile-center
 @font-face {
 	font-family: "cute-animal";
 	src: url("../../../../public/fonts/cute-animal.ttf") ;
    }
-.content-center {
+.content-profile-center {
 	span{
 		font-size:  2em;
 		font-family:  "cute-animal", sans-serif;
@@ -79,8 +79,8 @@
 //   /* Animate Background Image */
   
 		-webkit-text-fill-color: transparent;
-		-webkit-animation: aitf 80s linear infinite;
-		 animation: aitf 80s linear infinite;
+		-webkit-animation: animTitle 80s linear infinite;
+		 animation: animTitle 80s linear infinite;
   
   /* Activate hardware acceleration for smoother animations */
   
@@ -103,9 +103,9 @@
     max-width: 880px;
 }
 /* Animate Background Image */
-@keyframes aitf {
-	0% { background-position: 0% 50%; }
-	100% { background-position: 100% 50%; }
+@keyframes animTitle {
+	100% { background-position: 0% 50%; }
+	0% { background-position: 100% 50%; }
 }
 
 .profile-img img {
