--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -61,14 +61,14 @@
 	src: url("../../../../public/fonts/cute-animal.ttf") ;
    }
 .content-profile-center {
-	span{
+	span.name{
 		font-size:  2em;
 		font-family:  "cute-animal", sans-serif;
 		letter-spacing: 0;
 		padding: .25em 0 .325em;
 		display: block;
 		margin: 0 auto;
-		text-shadow: 0 0 80px rgba(255,255,255,.5);
+		color:$color-profile !important;
   
   /* Clip Background Image */
   
@@ -127,56 +127,69 @@
     animation: none;
 }
 //buttons
-$h-root: 180; // try changing this :) [0-360]
-$c-primary: hsl($h-root, 60%, 30%);
+$c-primary: rgb(31, 122, 122);
 $c-primary-text: #EEE;
-$c-secondary: hsl($h-root + -135, 80%, 60%);
+$c-secondary: #ebc247;
 $c-secondary-text: #111;
 
 
-button {
-  appearance: none;
-  border-radius: 50%;
-  border: 0;
-  background-color: $c-primary;
-  color: $c-primary-text;
-  cursor: pointer;
-  font-family: inherit;
-  font-weight: 900;
-  letter-spacing: .0816em;
-  position: relative;
-  text-transform: uppercase;
-  transition: background-color .25s ease-out, transform .5s ease-out;
-  &:hover {
-    background-color: $c-secondary;
-    color: $c-secondary-text;
-  }
-}
 
-.try {
+.twoButtons {
+	color: $c-primary-text;
+	padding: 1em;
+	margin: 200px;
+	
+	text-align: right;
+	width: 61.8%;
+	white-space: nowrap;
+  
+  }
+   .try {
 	vertical-align: middle;
-  font-size: .618rem;
-  height: 3rem;
-  width: 3rem;
-  margin: 0 .5rem;
-
-  &:hover {
-    transform: scale(1.3333);
-    
-    .text {
-      display: inline-block;
-      transform: scale(.75);
-    }
-    ~ .buy {
-      transform: scale(.75);
-    }
   }
-  .text {
-    transition: transform .5s ease-out;
-    transform: scale(1);
-  }
-}
+  
 
+  
+  button {
+	appearance: none;
+	border-radius: 50%;
+	border: 0;
+	background-color: $c-primary;
+	color: $c-primary-text;
+	cursor: pointer;
+	font-family: inherit;
+	font-weight: 900;
+	letter-spacing: .0816em;
+	position: relative;
+	text-transform: uppercase;
+	transition: background-color .25s ease-out, transform .5s ease-out;
+	&:hover {
+	  background-color: $c-secondary;
+	  color: $c-secondary-text;
+	}
+  }
+  
+  .try {
+	font-size: .618rem;
+	height: 3rem;
+	width: 3rem;
+	margin: 0 .5rem;
+  
+	&:hover {
+	  transform: scale(1.3333);
+	  
+	  .text {
+		display: inline-block;
+		transform: scale(.75);
+	  }
+	 
+	}
+	.text {
+	  transition: transform .5s ease-out;
+	  transform: scale(1);
+	}
+  }
+  
 //social
 #social{
 	position: absolute;
