--- a/public/css/main.css
+++ b/public/css/main.css
@@ -271,9 +271,8 @@ a.active:not(.logo) {
 }
 
 .twoButtons {
-  color: #EEE;
+  color: white;
   padding: 1em;
-  margin: 200px;
   text-align: right;
   width: 61.8%;
   white-space: nowrap;
@@ -287,14 +286,12 @@ button {
   appearance: none;
   border-radius: 50%;
   border: 0;
-  background-color: #1f7a7a;
-  color: #EEE;
+  background-color: white;
   cursor: pointer;
   font-family: inherit;
   font-weight: 900;
   letter-spacing: .0816em;
   position: relative;
-  text-transform: uppercase;
   transition: background-color .25s ease-out, transform .5s ease-out;
 }
 
@@ -305,8 +302,8 @@ button:hover {
 
 .try {
   font-size: .618rem;
-  height: 3rem;
-  width: 3rem;
+  height: 5rem;
+  width: 5rem;
   margin: 0 .5rem;
 }
 
