--- a/public/css/main.css
+++ b/public/css/main.css
@@ -301,9 +301,10 @@ button:hover {
 }
 
 .try {
-  font-size: .618rem;
+  font-size: 1rem;
   height: 5rem;
   width: 5rem;
+  padding: 10px;
   margin: 0 .5rem;
 }
 
@@ -317,6 +318,9 @@ button:hover {
 }
 
 .try .text {
+  padding: 5px;
+  word-wrap: break-word;
+  word-break: break-all;
   transition: transform .5s ease-out;
   transform: scale(1);
 }
