--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -165,9 +165,10 @@ $c-secondary-text: #111;
   }
   
   .try {
-	font-size: .618rem;
+	font-size: 1rem;	
 	height: 5rem;
 	width: 5rem;
+	padding: 10px;
 	margin: 0 .5rem;
   
 	&:hover {
@@ -180,6 +181,9 @@ $c-secondary-text: #111;
 	 
 	}
 	.text {
+		padding: 5px;
+		word-wrap: break-word;
+		word-break: break-all;
 	  transition: transform .5s ease-out;
 	  transform: scale(1);
 	}
