--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -89,7 +89,11 @@
 		-webkit-backface-visibility: hidden;
 		backface-visibility: hidden;
   
-	}			
+	}	
+	h3{
+		color: #725704;
+		font-weight: bold;
+	}		
 	position: absolute;
     top: 50%;
     left: 50%;
