--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -1,9 +1,10 @@
     //Variables Colors
-    $color-title:#302f2f;
+    $color-titles:#302f2f;
     $color-paragraph:#9c9696;
-    $color-profile:#ffffff;
+    $color-profile1:white;
+    $color-profile2:#ebc247;
     $color-bgNav: linear-gradient(90deg, #001415 0%, rgba(0,50,63,1) 35%, rgba(16,177,205,1) 100%);
-    $color-bgLinkNav: rgba(255, 255, 255, 0.199);
+    
     
     //Variables font family
     $fontfamily : 'Cinzel Decorative', cursive;
