--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,6 +108,7 @@ h4, .logo {
 
 .navbar {
   position: fixed;
+  font-weight: bold !important;
   top: 0;
   background-color: rgba(255, 255, 255, 0);
   transition: 0.3s linear;
@@ -115,7 +116,7 @@ h4, .logo {
 
 .navbar .logo {
   font-weight: bold;
-  color: #ffffff;
+  color: white;
 }
 
 .navbar li {
@@ -130,6 +131,7 @@ h4, .logo {
   text-decoration: none;
   text-transform: uppercase;
   transition: 0.5s;
+  font-weight: 800;
 }
 
 .navbar li a::after {
@@ -139,14 +141,14 @@ h4, .logo {
   left: 0;
   width: 100%;
   height: 3px;
-  background: #f0cc04;
+  background-color: #ebc247;
   transform: scaleX(0);
   transform-origin: right;
-  transition: transform 0.5s;
+  transition: all 0.5s;
 }
 
 .navbar li a:hover {
-  color: #f5d796;
+  color: #ebc247;
 }
 
 .navbar li a:hover::after {
@@ -155,7 +157,7 @@ h4, .logo {
 }
 
 a.active:not(.logo) {
-  color: #f1d695 !important;
+  color: #ebc247;
 }
 
 .invisible {
@@ -228,7 +230,7 @@ a.active:not(.logo) {
   padding: .25em 0 .325em;
   display: block;
   margin: 0 auto;
-  color: #ffffff !important;
+  color: white;
   /* Clip Background Image */
   background: url(../../../../public/images/animated-text-fill.png) repeat-y;
   -webkit-background-clip: text;
@@ -241,7 +243,6 @@ a.active:not(.logo) {
 }
 
 .content-profile-center h3 {
-  color: #725704;
   font-weight: bold;
 }
 
@@ -276,52 +277,42 @@ a.active:not(.logo) {
 }
 
 .twoButtons {
-  color: white;
-  padding: 1em;
-  text-align: right;
+  padding: 2em;
+  text-align: center;
   width: 61.8%;
-  white-space: nowrap;
-}
-
-button {
-  appearance: none;
-  border-radius: 50%;
-  border: 0;
-  box-shadow: inset -35px -15px 40px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-  font-family: inherit;
-  font-weight: 900;
-  letter-spacing: .0816em;
+  padding: 0 auto;
   position: relative;
-  transition: background-color .25s ease-out, transform .5s ease-out;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-button:hover {
-  background-color: #ebc247;
-  color: #111;
+.twoButtons a {
+  width: 120px;
+  height: 120px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.try {
-  font-size: 1rem;
-  height: 5rem;
-  width: 5rem;
-  margin: 0 .5rem;
+.twoButtons a span, .twoButtons a img {
+  position: relative;
+  width: 120px;
+  height: 120px;
 }
 
-.try:hover {
-  transform: scale(1.3333);
+.twoButtons a span {
+  text-align: center;
+  padding: 0;
+  top: 60px;
+  color: #ebc247;
+  font-weight: bold;
 }
 
-.try:hover .text {
-  word-wrap: break-word;
-  word-break: break-all;
-  transform: scale(0.75);
-}
-
-.try .text {
-  padding: 5px;
-  transition: transform .5s ease-out;
-  transform: scale(1);
+.twoButtons a img {
+  top: -10px;
+  opacity: 0.5;
 }
 
 #social {
@@ -330,7 +321,7 @@ button:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  color: #ffffff;
+  color: white;
 }
 
 #social .fa {
