--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -2,7 +2,7 @@
 .navbar { 
     .logo{
         font-weight: bold;
-        color: $color-profile;
+        color: $color-profile1;
     }   
     li {
         padding: 6px 0;  
@@ -15,7 +15,7 @@
           text-decoration: none;
           text-transform: uppercase;
           transition: 0.5s;
-         
+          font-weight: 800;
     
           &::after {
             position: absolute;
@@ -24,14 +24,14 @@
             left: 0;
             width: 100%;
             height: 3px;
-            background: #f0cc04;
+            background-color: $color-profile2;
             transform: scaleX(0);
             transform-origin: right;
-            transition: transform 0.5s;
+            transition: all 0.5s;
           }
     
           &:hover {
-            color: #f5d796;            
+            color: $color-profile2;          
           }
     
           &:hover::after {
@@ -41,6 +41,7 @@
         }
       }  
     position: fixed;
+    font-weight: bold !important;
     top:0;
     background-color: rgba(255,255,255,0); // media query
     -webkit-transition:  0.3s linear; 
@@ -50,8 +51,7 @@
     // height: 80px;    
 }
 a.active:not(.logo) {
-    color: #f1d695 !important;
-   
+    color: $color-profile2;   
 }
 .invisible{
     top:-50px;   
