--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -2,7 +2,8 @@
     $color-titles:#302f2f;
     $color-paragraph:#9c9696;
     $color-profile1:white;
-    $color-profile2:#ebc247;
+    // $color-profile2:#ebc247;
+    $color-profile2:#EE5100;
     $color-bgNav: linear-gradient(90deg, #001415 0%, rgba(0,50,63,1) 35%, rgba(16,177,205,1) 100%);
     
     
