--- a/public/css/main.css
+++ b/public/css/main.css
@@ -141,14 +141,14 @@ h4, .logo {
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #ebc247;
+  background-color: #EE5100;
   transform: scaleX(0);
   transform-origin: right;
   transition: all 0.5s;
 }
 
 .navbar li a:hover {
-  color: #ebc247;
+  color: #EE5100;
 }
 
 .navbar li a:hover::after {
@@ -157,7 +157,7 @@ h4, .logo {
 }
 
 a.active:not(.logo) {
-  color: #ebc247;
+  color: #EE5100;
 }
 
 .invisible {
@@ -294,25 +294,40 @@ a.active:not(.logo) {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.twoButtons a:hover img {
+  width: 130px;
+  height: 130px;
+}
+
+.twoButtons a:hover span {
+  color: #EE5100;
+  font-size: 1.2rem;
+  top: 70px;
 }
 
 .twoButtons a span, .twoButtons a img {
   position: relative;
   width: 120px;
   height: 120px;
+  transition: all .3s ease-in;
 }
 
 .twoButtons a span {
-  text-align: center;
-  padding: 0;
+  display: flex;
+  justify-content: center;
+  padding-left: 5px;
   top: 60px;
-  color: #ebc247;
+  color: white;
   font-weight: bold;
 }
 
 .twoButtons a img {
   top: -10px;
-  opacity: 0.5;
+  opacity: 0.3;
 }
 
 #social {
