--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -147,25 +147,37 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		vertical-align: middle;
+			text-align: center;
 		&:hover{
-
+			& img{
+				width: 130px;
+				height: 130px;
+			}
+			& span{
+				color: $color-profile2;
+				font-size: 1.2rem ;
+				top:70px;
+			}
 		}
 		span,img{
 			position: relative;		
 			width: 120px;
 		    height: 120px;
+			transition: all .3s ease-in;
 		}
 		span{
-			text-align: center;
-			padding: 0;
-			top:60px;
-			color: $color-profile2;
-			font-weight: bold;
+			display: flex;
+			justify-content: center;
 			
+			padding-left:  5px;
+			top:60px;
+			color: $color-profile1;
+			font-weight: bold;			
 		}
 		img{
 			top: -10px;
-			opacity: 0.5;
+			opacity: 0.3;
 		}
      
 	}
