--- a/public/css/sass/bases/_reset.scss
+++ b/public/css/sass/bases/_reset.scss
@@ -18,4 +18,9 @@ img {
     border-style: none;
   }
 
+  *:focus,*:active {
+    outline: none !important;
+    -webkit-tap-highlight-color: transparent;
+  }
+
  
