--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -19,6 +20,11 @@ ol, ul {
 
 img {
   border-style: none;
+}
+
+*:focus, *:active {
+  outline: none !important;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -137,7 +143,7 @@ h4, .logo {
 .navbar li a::after {
   position: absolute;
   content: "";
-  top: 100%;
+  top: 80%;
   left: 0;
   width: 100%;
   height: 3px;
@@ -277,106 +283,152 @@ a.active:not(.logo) {
 }
 
 .twoButtons {
-  padding: 2em;
-  text-align: center;
-  width: 61.8%;
-  padding: 0 auto;
   position: relative;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  margin-top: 30px;
 }
 
-.twoButtons a {
-  width: 120px;
-  height: 120px;
-  padding: 0;
+.twoButtons div {
+  width: 85px;
+  height: 85px;
+  margin: 25px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  vertical-align: middle;
-  text-align: center;
+  transition: all 3s ease-in;
 }
 
-.twoButtons a:hover img {
-  width: 130px;
-  height: 130px;
+.twoButtons div:hover {
+  transform: translateY(-100%);
 }
 
-.twoButtons a:hover span {
+.twoButtons div:hover a {
   color: #EE5100;
-  font-size: 1.2rem;
-  top: 70px;
+  opacity: 1;
 }
 
-.twoButtons a span, .twoButtons a img {
+.twoButtons div a, .twoButtons div img {
+  text-align: center;
   position: relative;
-  width: 120px;
-  height: 120px;
+  width: 80px;
+  height: 80px;
   transition: all .3s ease-in;
 }
 
-.twoButtons a span {
+.twoButtons div a {
   display: flex;
   justify-content: center;
-  padding-left: 5px;
-  top: 60px;
-  color: white;
+  top: 80px;
+  color: #EE5100;
+  opacity: .5;
   font-weight: bold;
+  line-height: 20px;
+  z-index: 1;
 }
 
-.twoButtons a img {
-  top: -10px;
-  opacity: 0.3;
+.twoButtons div img {
+  top: 15px;
+  opacity: 0.6;
+  z-index: -1;
 }
 
-#social {
-  position: absolute;
-  top: 98%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: white;
+.wrapper {
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  justify-content: center;
 }
 
-#social .fa {
-  width: 40px;
-  height: 40px;
-  padding: 10px;
-  font-size: 20px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-  color: white;
+.wrapper .icon {
+  position: relative;
+  background-color: #ffffff;
   border-radius: 50%;
+  padding: 15px;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-#social .fa:hover {
-  opacity: 0.7;
+.wrapper .tooltip {
+  position: absolute;
+  top: 0;
+  font-size: 14px;
+  background-color: #ffffff;
+  color: #ffffff;
+  padding: 5px 8px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-#social .fa-facebook {
-  background: #3B5998;
+.wrapper .tooltip::before {
+  position: absolute;
+  content: "";
+  height: 8px;
+  width: 8px;
+  background-color: #ffffff;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-#social .fa-twitter {
-  background: #55ACEE;
+.wrapper .icon:hover .tooltip {
+  top: -45px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
-#social .fa-linkedin {
-  background: #007bb5;
+.wrapper .icon:hover span,
+.wrapper .icon:hover .tooltip {
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
 }
 
-#social .fa-instagram {
-  background: #8a3ab9;
+.wrapper .facebook:hover,
+.wrapper .facebook:hover .tooltip,
+.wrapper .facebook:hover .tooltip::before {
+  background-color: #3b5999;
+  color: #ffffff;
 }
 
-#social .fa-pinterest {
-  background: #cb2027;
+.wrapper .twitter:hover,
+.wrapper .twitter:hover .tooltip,
+.wrapper .twitter:hover .tooltip::before {
+  background-color: #46c1f6;
+  color: #ffffff;
 }
 
-#social .fa-github {
-  background: #000000;
+.wrapper .instagram:hover,
+.wrapper .instagram:hover .tooltip,
+.wrapper .instagram:hover .tooltip::before {
+  background-color: #e1306c;
+  color: #ffffff;
+}
+
+.wrapper .github:hover,
+.wrapper .github:hover .tooltip,
+.wrapper .github:hover .tooltip::before {
+  background-color: #333333;
+  color: #ffffff;
+}
+
+.wrapper .youtube:hover,
+.wrapper .youtube:hover .tooltip,
+.wrapper .youtube:hover .tooltip::before {
+  background-color: #de463b;
+  color: #ffffff;
 }
 
 .bubble-ocean {
@@ -386,8 +438,6 @@ a.active:not(.logo) {
 }
 
 .bubble {
-  width: 20px;
-  height: 20px;
   border-radius: 100%;
   position: absolute;
   background: #275b7a;
@@ -421,8 +471,8 @@ a.active:not(.logo) {
 }
 
 .bubble--1 {
-  width: 15px;
-  height: 15px;
+  width: 9px;
+  height: 9px;
   left: 15%;
   bottom: 30px;
   animation-delay: 0.5s;
@@ -461,8 +511,8 @@ a.active:not(.logo) {
 }
 
 .bubble--5 {
-  width: 30px;
-  height: 30px;
+  width: 10px;
+  height: 10px;
   left: 60%;
   bottom: 30px;
   animation-delay: -10s;
@@ -471,8 +521,8 @@ a.active:not(.logo) {
 }
 
 .bubble--6 {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   left: 90%;
   bottom: 30px;
   animation-delay: 2s;
@@ -521,8 +571,8 @@ a.active:not(.logo) {
 }
 
 .bubble--12 {
-  width: 25px;
-  height: 25px;
+  width: 7px;
+  height: 5px;
   left: 95%;
   bottom: 30px;
   animation-duration: 19s;
@@ -550,8 +600,8 @@ a.active:not(.logo) {
 }
 
 .bubble--15 {
-  width: 25px;
-  height: 25px;
+  width: 17px;
+  height: 17px;
   left: 65%;
   bottom: 30px;
   animation-delay: -8s;
