--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -4,6 +4,7 @@
     $color-profile1:white;
     // $color-profile2:#ebc247;
     $color-profile2:#EE5100;
+    $color-profile3:#e49670;
     $color-bgNav: linear-gradient(90deg, #001415 0%, rgba(0,50,63,1) 35%, rgba(16,177,205,1) 100%);
     
     
