--- a/public/css/main.css
+++ b/public/css/main.css
@@ -112,6 +112,11 @@ h4, .logo {
   width: 100%;
 }
 
+@font-face {
+  font-family: "Ludicrous-Stencil";
+  src: url("../../../../public/fonts/Ludicrous-Stencil.ttf");
+}
+
 .navbar {
   position: fixed;
   font-weight: bold !important;
@@ -121,8 +126,17 @@ h4, .logo {
 }
 
 .navbar .logo {
+  font-family: "Ludicrous-Stencil",sans-serif;
   font-weight: bold;
-  color: white;
+  color: #e48022;
+  font-size: 30px !important;
+  line-height: 50px;
+  background: -webkit-linear-gradient(0deg, #e48022 0%, #ffb876 30%, white 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background: -moz-linear-gradient(0deg, #e48022 0%, #ffb876 30%, white 100%);
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
 }
 
 .navbar li {
@@ -147,14 +161,14 @@ h4, .logo {
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #EE5100;
+  background-color: #e48022;
   transform: scaleX(0);
   transform-origin: right;
   transition: all 0.5s;
 }
 
 .navbar li a:hover {
-  color: #EE5100;
+  color: #e48022;
 }
 
 .navbar li a:hover::after {
@@ -163,7 +177,7 @@ h4, .logo {
 }
 
 a.active:not(.logo) {
-  color: #EE5100;
+  color: #e48022;
 }
 
 .invisible {
@@ -283,10 +297,11 @@ a.active:not(.logo) {
 }
 
 .twoButtons {
+  font-family: "Ludicrous-Stencil",sans-serif;
   position: relative;
   display: flex;
   justify-content: center;
-  margin-top: 30px;
+  font-size: 20px;
 }
 
 .twoButtons div {
@@ -305,7 +320,7 @@ a.active:not(.logo) {
 }
 
 .twoButtons div:hover a {
-  color: #EE5100;
+  color: #e48022;
   opacity: 1;
 }
 
@@ -321,8 +336,8 @@ a.active:not(.logo) {
   display: flex;
   justify-content: center;
   top: 80px;
-  color: #EE5100;
-  opacity: .5;
+  color: #e48022;
+  opacity: .6;
   font-weight: bold;
   line-height: 20px;
   z-index: 1;
