--- a/public/css/main.css
+++ b/public/css/main.css
@@ -302,6 +302,7 @@ a.active:not(.logo) {
   display: flex;
   justify-content: center;
   font-size: 20px;
+  letter-spacing: 4px;
 }
 
 .twoButtons div {
