--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -139,6 +139,7 @@
 	display: flex;
 	justify-content:center;
 	font-size: 20px;
+	letter-spacing: 4px;
 	// line-height: 40px;
 	// margin-top: 30px;
 	div{
