--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@font-face {
+  font-family: "Ludicrous-Stencil";
+  font-weight: 400;
+  src: url("../../../../public/fonts/Ludicrous-Stencil.ttf");
+  font-display: swap;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -113,8 +121,8 @@ h4, .logo {
 }
 
 @font-face {
-  font-family: "Ludicrous-Stencil";
-  src: url("../../../../public/fonts/Ludicrous-Stencil.ttf");
+  font-family: "Cedarville Cursive";
+  src: url("https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap");
 }
 
 .navbar {
@@ -126,7 +134,7 @@ h4, .logo {
 }
 
 .navbar .logo {
-  font-family: "Ludicrous-Stencil",sans-serif;
+  font-family: 'Cedarville Cursive', cursive;
   font-weight: bold;
   color: #e48022;
   font-size: 30px !important;
